# tuples

./: Cargo.toml  Justfile  data.json  f.json  order.json  test.json  test2.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: docs.yml
_includes/: head-custom.html
api-docs/: .gitignore
api-docs/_util/: intro.md  sabledocs.toml
crates/bench/: Cargo.toml
crates/bench/src/: fdb_bench.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  filter.rs  lib.rs  playbook.rs  run.rs  schema.rs  tuple.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: batch_writer.rs  executor.rs  main.rs
crates/storage/: Cargo.toml
crates/storage/src/: agent_store.rs  filter_store.rs  lib.rs  playbook_store.rs  run_store.rs  schema_store.rs  tuple_store.rs
crates/storage/src/dynamo_store/: agent_store.rs  filter_store.rs  mod.rs  playbook_store.rs  run_store.rs  schema_store.rs  tuple_store.rs
crates/storage/src/fdb_store/: agent_store.rs  filter_store.rs  mod.rs  playbook_store.rs  run_store.rs  schema_store.rs  tuple_store.rs
crates/storage/src/pg_store/: agent_store.rs  filter_store.rs  mod.rs  playbook_store.rs  run_store.rs  schema_store.rs  tuple_store.rs
crates/storage/src/pg_store/migrations/: 001_init.sql
crates/ui/: Cargo.toml
crates/ui/src/: grpc.rs  main.rs  theme.rs
crates/ui/src/components/: mod.rs  nav.rs  schemas.rs  status_bar.rs
docs/: PLAN.md  performance.md
proto/: .gitignore  agents.proto  common.proto  playbooks.proto  runs.proto  schemas.proto  tuples.proto
