[workspace]
members = [
    "crates/proto",
    "crates/server",
    "crates/cli",
    "crates/core",
    "crates/storage",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# FoundationDB
foundationdb = { version = "0.10", features = ["fdb-7_3"] }

# gRPC / protobuf
tonic = "0.12"
prost = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUIDs and timestamps
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }

# JSON Schema validation
jsonschema = { version = "0.17", default-features = false }

# Regex (for predicate matching)
regex = "1"

# Internal crates
proto = { path = "crates/proto" }
tuples-core = { path = "crates/core" }
tuples-storage = { path = "crates/storage" }
