[package]
name = "bench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tuples-bench"
path = "src/main.rs"

[dependencies]
proto      = { workspace = true }
tonic      = { workspace = true }
tokio      = { workspace = true }
clap       = { workspace = true }
anyhow     = { workspace = true }
serde_json = { workspace = true }
rand       = { workspace = true }
