[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tuplesd"
path = "src/main.rs"

[features]
fdb = ["tuples-storage/fdb", "dep:foundationdb"]
postgres = ["tuples-storage/postgres", "dep:sqlx"]
dynamodb = ["tuples-storage/dynamodb"]

[dependencies]
proto = { workspace = true }
tuples-core = { workspace = true }
tuples-storage = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tokio-stream = { workspace = true }
foundationdb = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
