[package]
name = "tuples-storage"
version.workspace = true
edition.workspace = true

[features]
fdb = ["dep:foundationdb"]
postgres = ["dep:sqlx"]
dynamodb = ["dep:aws-sdk-dynamodb", "dep:aws-config"]

[dependencies]
tuples-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
foundationdb = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
