[package]
name = "ui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tuples-ui"
path = "src/main.rs"

[dependencies]
dioxus          = "0.7"
dioxus-liveview = { version = "0.7", features = ["axum"] }
axum           = "0.8"
proto          = { workspace = true }
tonic          = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }
tokio-stream   = { workspace = true }
serde_json     = { workspace = true }
